--- a/package.json
+++ b/package.json
@@ -11,12 +11,17 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-redux": "^7.2.2",
+    "react-redux-8": "npm:react-redux@^8.0.4",
+    "redux": "^4.0.5",
+    "@reduxjs/toolkit": "^1.9.3"
   },
   "devDependencies": {
     "@pega/cosmos-react-core": "7.0.0-build.26.7",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^18.3.0",
+    "@types/react-redux": "^7.1.24",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
     "@typescript-eslint/parser": "^7.15.0",
     "@vitejs/plugin-react": "^4.3.1",
