--- a/package.json
+++ b/package.json
@@ -10,12 +10,12 @@
     "preview": "vite build; vite preview --host"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^7.2.2",
     "react-redux-8": "npm:react-redux@^8.0.4",
-    "redux": "^4.0.5",
-    "@reduxjs/toolkit": "^1.9.3"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@pega/cosmos-react-core": "7.0.0-build.26.7",
@@ -28,6 +28,7 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
+    "prettier": "3.3.3",
     "react-router-dom": "^6.0.2",
     "styled-components": "^5.2.0",
     "typescript": "^5.2.2",
